[tool.poetry]
name = "dataundump"
version = "0.1.0"
description = ""
authors = ["Pieterjan Montens <pieterjan@montens.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rdflib = "^7.1.4"
click = "^8.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
